--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -60,6 +60,25 @@ services:
       db:
         condition: service_healthy
 
+  process-front:
+    build:
+      context: frontend
+      target: builder
+    working_dir: /code
+    restart: always
+    container_name: frontend
+    volumes:
+      - ./frontend:/code
+    networks:
+      - backnet
+    ports:
+      - 3000:3000
+    expose:
+      - 3000
+    depends_on:
+      db:
+        condition: service_healthy
+
 networks:
   backnet:
 
